tests/ui/error-codes/E0607.stderr
error[E0607]: cannot cast thin pointer `*const u8` to wide pointer `*const [u8]`
  --> $DIR/E0607.rs:3:5
   |
LL |     v as *const [u8];
   |     ^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0607`.
